csrf token error

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    {% csrf_token %}
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script>
         var URL = "/api/login/";
